@@ -1,5 +1,5 @@
 package="tvstreamrecord"
-version="0.4.2a"
+version="0.4.4"
 maintainer="Pavion"
 description="Program to record TV streams. Python 2.x required. Server runs at port 8030 (changeable)"
 reloadui="yes"
