@@ -17,6 +17,17 @@
 <label for="email">Start/end time</label>
 <input type="text" maxlength="5" name="email" id="timepicker_inline_div1" class="text ui-widget-content ui-corner-all" />
 <input type="text" maxlength="5" name="email" id="timepicker_inline_div2" class="text ui-widget-content ui-corner-all" />
+<label for="recurr">Recurrent records</label>
+<div id="weekday">
+<input type="checkbox" id="wday0" /><label id="wwd0" for="wday0">Mo</label>
+<input type="checkbox" id="wday1" /><label id="wwd1" for="wday1">Tu</label>
+<input type="checkbox" id="wday2" /><label id="wwd2" for="wday2">We</label>
+<input type="checkbox" id="wday3" /><label id="wwd3" for="wday3">Th</label>
+<input type="checkbox" id="wday4" /><label id="wwd4" for="wday4">Fr</label>
+<input type="checkbox" id="wday5" /><label id="wwd5" for="wday5">Sa</label>
+<input type="checkbox" id="wday6" /><label id="wwd6" for="wday6">So</label>
+</div>
+<!-- <input type="text" maxlength="3" id="recurrinp" class="text ui-widget-content ui-corner-all" name="recurrinp" value="0"/>--> 
 </fieldset>
 </form>
 </div>
@@ -31,6 +42,7 @@
 <th class="rchan">Channel</th>
 <th class="rat">at</th>
 <th class="rtill">till</th>
+<th class="rrecu">Recurrent</th>
 <th class="rcontrols">control</th>
 <th class="rcontrols">c1</th>
 <th class="rcontrols">c2</th>
